#------------------------------------------------------------------------------
#
#  $Id$
#
#  Copyright (C) 2006-2008  Florian Pose, Ingenieurgemeinschaft IgH
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#  ---
#
#  The license mentioned above concerns the source code only. Using the
#  EtherCAT technology and brand is only permitted in compliance with the
#  industrial property and similar rights of Beckhoff Automation GmbH.
#
#------------------------------------------------------------------------------

EXTRA_DIST = \
	Kbuild.in \
	LICENSE \
	e1000-2.6.13-ethercat.h \
	e1000-2.6.13-orig.h \
	e1000-2.6.18-ethercat.h \
	e1000-2.6.18-orig.h \
	e1000-2.6.20-ethercat.h \
	e1000-2.6.20-orig.h \
	e1000-2.6.22-ethercat.h \
	e1000-2.6.22-orig.h \
	e1000-2.6.24-ethercat.h \
	e1000-2.6.24-orig.h \
	e1000-2.6.26-ethercat.h \
	e1000-2.6.26-orig.h \
	e1000-2.6.27-ethercat.h \
	e1000-2.6.27-orig.h \
	e1000-2.6.28-ethercat.h \
	e1000-2.6.28-orig.h \
	e1000-2.6.29-ethercat.h \
	e1000-2.6.29-orig.h \
	e1000-2.6.31-ethercat.h \
	e1000-2.6.31-orig.h \
	e1000-2.6.32-ethercat.h \
	e1000-2.6.32-orig.h \
	e1000-2.6.33-ethercat.h \
	e1000-2.6.33-orig.h \
	e1000-2.6.35-ethercat.h \
	e1000-2.6.35-orig.h \
	e1000-2.6.37-ethercat.h \
	e1000-2.6.37-orig.h \
	e1000-3.0-ethercat.h \
	e1000-3.0-orig.h \
	e1000-3.10-ethercat.h \
	e1000-3.10-orig.h \
	e1000-3.12-ethercat.h \
	e1000-3.12-orig.h \
	e1000-3.14-ethercat.h \
	e1000-3.14-orig.h \
	e1000-3.16-ethercat.h \
	e1000-3.16-orig.h \
	e1000-3.18-ethercat.h \
	e1000-3.18-orig.h \
	e1000-3.4-ethercat.h \
	e1000-3.4-orig.h \
	e1000-3.6-ethercat.h \
	e1000-3.6-orig.h \
	e1000-3.8-ethercat.h \
	e1000-3.8-orig.h \
	e1000-4.1-ethercat.h \
	e1000-4.1-orig.h \
	e1000-4.4-ethercat.h \
	e1000-4.4-orig.h \
	e1000-4.9-ethercat.h \
	e1000-4.9-orig.h \
	e1000-4.14-ethercat.h \
	e1000-4.14-orig.h \
	e1000_ethtool-2.6.13-ethercat.c \
	e1000_ethtool-2.6.13-orig.c \
	e1000_ethtool-2.6.18-ethercat.c \
	e1000_ethtool-2.6.18-orig.c \
	e1000_ethtool-2.6.20-ethercat.c \
	e1000_ethtool-2.6.20-orig.c \
	e1000_ethtool-2.6.22-ethercat.c \
	e1000_ethtool-2.6.22-orig.c \
	e1000_ethtool-2.6.24-ethercat.c \
	e1000_ethtool-2.6.24-orig.c \
	e1000_ethtool-2.6.26-ethercat.c \
	e1000_ethtool-2.6.26-orig.c \
	e1000_ethtool-2.6.27-ethercat.c \
	e1000_ethtool-2.6.27-orig.c \
	e1000_ethtool-2.6.28-ethercat.c \
	e1000_ethtool-2.6.28-orig.c \
	e1000_ethtool-2.6.29-ethercat.c \
	e1000_ethtool-2.6.29-orig.c \
	e1000_ethtool-2.6.31-ethercat.c \
	e1000_ethtool-2.6.31-orig.c \
	e1000_ethtool-2.6.32-ethercat.c \
	e1000_ethtool-2.6.32-orig.c \
	e1000_ethtool-2.6.33-ethercat.c \
	e1000_ethtool-2.6.33-orig.c \
	e1000_ethtool-2.6.35-ethercat.c \
	e1000_ethtool-2.6.35-orig.c \
	e1000_ethtool-2.6.37-ethercat.c \
	e1000_ethtool-2.6.37-orig.c \
	e1000_ethtool-3.0-ethercat.c \
	e1000_ethtool-3.0-orig.c \
	e1000_ethtool-3.10-ethercat.c \
	e1000_ethtool-3.10-orig.c \
	e1000_ethtool-3.12-ethercat.c \
	e1000_ethtool-3.12-orig.c \
	e1000_ethtool-3.14-ethercat.c \
	e1000_ethtool-3.14-orig.c \
	e1000_ethtool-3.16-ethercat.c \
	e1000_ethtool-3.16-orig.c \
	e1000_ethtool-3.18-ethercat.c \
	e1000_ethtool-3.18-orig.c \
	e1000_ethtool-3.4-ethercat.c \
	e1000_ethtool-3.4-orig.c \
	e1000_ethtool-3.6-ethercat.c \
	e1000_ethtool-3.6-orig.c \
	e1000_ethtool-3.8-ethercat.c \
	e1000_ethtool-3.8-orig.c \
	e1000_ethtool-4.1-ethercat.c \
	e1000_ethtool-4.1-orig.c \
	e1000_ethtool-4.4-ethercat.c \
	e1000_ethtool-4.4-orig.c \
	e1000_ethtool-4.9-ethercat.c \
	e1000_ethtool-4.9-orig.c \
	e1000_ethtool-4.14-ethercat.c \
	e1000_ethtool-4.14-orig.c \
	e1000_hw-2.6.13-ethercat.c \
	e1000_hw-2.6.13-ethercat.h \
	e1000_hw-2.6.13-orig.c \
	e1000_hw-2.6.13-orig.h \
	e1000_hw-2.6.18-ethercat.c \
	e1000_hw-2.6.18-ethercat.h \
	e1000_hw-2.6.18-orig.c \
	e1000_hw-2.6.18-orig.h \
	e1000_hw-2.6.20-ethercat.c \
	e1000_hw-2.6.20-ethercat.h \
	e1000_hw-2.6.20-orig.c \
	e1000_hw-2.6.20-orig.h \
	e1000_hw-2.6.22-ethercat.c \
	e1000_hw-2.6.22-ethercat.h \
	e1000_hw-2.6.22-orig.c \
	e1000_hw-2.6.22-orig.h \
	e1000_hw-2.6.24-ethercat.c \
	e1000_hw-2.6.24-ethercat.h \
	e1000_hw-2.6.24-orig.c \
	e1000_hw-2.6.24-orig.h \
	e1000_hw-2.6.26-ethercat.c \
	e1000_hw-2.6.26-ethercat.h \
	e1000_hw-2.6.26-orig.c \
	e1000_hw-2.6.26-orig.h \
	e1000_hw-2.6.27-ethercat.c \
	e1000_hw-2.6.27-ethercat.h \
	e1000_hw-2.6.27-orig.c \
	e1000_hw-2.6.27-orig.h \
	e1000_hw-2.6.28-ethercat.c \
	e1000_hw-2.6.28-ethercat.h \
	e1000_hw-2.6.28-orig.c \
	e1000_hw-2.6.28-orig.h \
	e1000_hw-2.6.29-ethercat.c \
	e1000_hw-2.6.29-ethercat.h \
	e1000_hw-2.6.29-orig.c \
	e1000_hw-2.6.29-orig.h \
	e1000_hw-2.6.31-ethercat.c \
	e1000_hw-2.6.31-ethercat.h \
	e1000_hw-2.6.31-orig.c \
	e1000_hw-2.6.31-orig.h \
	e1000_hw-2.6.32-ethercat.c \
	e1000_hw-2.6.32-ethercat.h \
	e1000_hw-2.6.32-orig.c \
	e1000_hw-2.6.32-orig.h \
	e1000_hw-2.6.33-ethercat.c \
	e1000_hw-2.6.33-ethercat.h \
	e1000_hw-2.6.33-orig.c \
	e1000_hw-2.6.33-orig.h \
	e1000_hw-2.6.35-ethercat.c \
	e1000_hw-2.6.35-ethercat.h \
	e1000_hw-2.6.35-orig.c \
	e1000_hw-2.6.35-orig.h \
	e1000_hw-2.6.37-ethercat.c \
	e1000_hw-2.6.37-ethercat.h \
	e1000_hw-2.6.37-orig.c \
	e1000_hw-2.6.37-orig.h \
	e1000_hw-3.0-ethercat.c \
	e1000_hw-3.0-ethercat.h \
	e1000_hw-3.0-orig.c \
	e1000_hw-3.0-orig.h \
	e1000_hw-3.10-ethercat.c \
	e1000_hw-3.10-ethercat.h \
	e1000_hw-3.10-orig.c \
	e1000_hw-3.10-orig.h \
	e1000_hw-3.12-ethercat.c \
	e1000_hw-3.12-ethercat.h \
	e1000_hw-3.12-orig.c \
	e1000_hw-3.12-orig.h \
	e1000_hw-3.14-ethercat.c \
	e1000_hw-3.14-ethercat.h \
	e1000_hw-3.14-orig.c \
	e1000_hw-3.14-orig.h \
	e1000_hw-3.16-ethercat.c \
	e1000_hw-3.16-ethercat.h \
	e1000_hw-3.16-orig.c \
	e1000_hw-3.16-orig.h \
	e1000_hw-3.18-ethercat.c \
	e1000_hw-3.18-ethercat.h \
	e1000_hw-3.18-orig.c \
	e1000_hw-3.18-orig.h \
	e1000_hw-3.4-ethercat.c \
	e1000_hw-3.4-ethercat.h \
	e1000_hw-3.4-orig.c \
	e1000_hw-3.4-orig.h \
	e1000_hw-3.6-ethercat.c \
	e1000_hw-3.6-ethercat.h \
	e1000_hw-3.6-orig.c \
	e1000_hw-3.6-orig.h \
	e1000_hw-3.8-ethercat.c \
	e1000_hw-3.8-ethercat.h \
	e1000_hw-3.8-orig.c \
	e1000_hw-3.8-orig.h \
	e1000_hw-4.1-ethercat.c \
	e1000_hw-4.1-ethercat.h \
	e1000_hw-4.1-orig.c \
	e1000_hw-4.1-orig.h \
	e1000_hw-4.4-ethercat.c \
	e1000_hw-4.4-ethercat.h \
	e1000_hw-4.4-orig.c \
	e1000_hw-4.4-orig.h \
	e1000_hw-4.9-ethercat.c \
	e1000_hw-4.9-ethercat.h \
	e1000_hw-4.9-orig.c \
	e1000_hw-4.9-orig.h \
	e1000_hw-4.14-ethercat.c \
	e1000_hw-4.14-ethercat.h \
	e1000_hw-4.14-orig.c \
	e1000_hw-4.14-orig.h \
	e1000_main-2.6.13-ethercat.c \
	e1000_main-2.6.13-orig.c \
	e1000_main-2.6.18-ethercat.c \
	e1000_main-2.6.18-orig.c \
	e1000_main-2.6.20-ethercat.c \
	e1000_main-2.6.20-orig.c \
	e1000_main-2.6.22-ethercat.c \
	e1000_main-2.6.22-orig.c \
	e1000_main-2.6.24-ethercat.c \
	e1000_main-2.6.24-orig.c \
	e1000_main-2.6.26-ethercat.c \
	e1000_main-2.6.26-orig.c \
	e1000_main-2.6.27-ethercat.c \
	e1000_main-2.6.27-orig.c \
	e1000_main-2.6.28-ethercat.c \
	e1000_main-2.6.28-orig.c \
	e1000_main-2.6.29-ethercat.c \
	e1000_main-2.6.29-orig.c \
	e1000_main-2.6.31-ethercat.c \
	e1000_main-2.6.31-orig.c \
	e1000_main-2.6.32-ethercat.c \
	e1000_main-2.6.32-orig.c \
	e1000_main-2.6.33-ethercat.c \
	e1000_main-2.6.33-orig.c \
	e1000_main-2.6.35-ethercat.c \
	e1000_main-2.6.35-orig.c \
	e1000_main-2.6.37-ethercat.c \
	e1000_main-2.6.37-orig.c \
	e1000_main-3.0-ethercat.c \
	e1000_main-3.0-orig.c \
	e1000_main-3.10-ethercat.c \
	e1000_main-3.10-orig.c \
	e1000_main-3.12-ethercat.c \
	e1000_main-3.12-orig.c \
	e1000_main-3.14-ethercat.c \
	e1000_main-3.14-orig.c \
	e1000_main-3.16-ethercat.c \
	e1000_main-3.16-orig.c \
	e1000_main-3.18-ethercat.c \
	e1000_main-3.18-orig.c \
	e1000_main-3.4-ethercat.c \
	e1000_main-3.4-orig.c \
	e1000_main-3.6-ethercat.c \
	e1000_main-3.6-orig.c \
	e1000_main-3.8-ethercat.c \
	e1000_main-3.8-orig.c \
	e1000_main-4.1-ethercat.c \
	e1000_main-4.1-orig.c \
	e1000_main-4.4-ethercat.c \
	e1000_main-4.4-orig.c \
	e1000_main-4.9-ethercat.c \
	e1000_main-4.9-orig.c \
	e1000_main-4.14-ethercat.c \
	e1000_main-4.14-orig.c \
	e1000_osdep-2.6.13-ethercat.h \
	e1000_osdep-2.6.13-orig.h \
	e1000_osdep-2.6.18-ethercat.h \
	e1000_osdep-2.6.18-orig.h \
	e1000_osdep-2.6.20-ethercat.h \
	e1000_osdep-2.6.20-orig.h \
	e1000_osdep-2.6.22-ethercat.h \
	e1000_osdep-2.6.22-orig.h \
	e1000_osdep-2.6.24-ethercat.h \
	e1000_osdep-2.6.24-orig.h \
	e1000_osdep-2.6.26-ethercat.h \
	e1000_osdep-2.6.26-orig.h \
	e1000_osdep-2.6.27-ethercat.h \
	e1000_osdep-2.6.27-orig.h \
	e1000_osdep-2.6.28-ethercat.h \
	e1000_osdep-2.6.28-orig.h \
	e1000_osdep-2.6.29-ethercat.h \
	e1000_osdep-2.6.29-orig.h \
	e1000_osdep-2.6.31-ethercat.h \
	e1000_osdep-2.6.31-orig.h \
	e1000_osdep-2.6.32-ethercat.h \
	e1000_osdep-2.6.32-orig.h \
	e1000_osdep-2.6.33-ethercat.h \
	e1000_osdep-2.6.33-orig.h \
	e1000_osdep-2.6.35-ethercat.h \
	e1000_osdep-2.6.35-orig.h \
	e1000_osdep-2.6.37-ethercat.h \
	e1000_osdep-2.6.37-orig.h \
	e1000_osdep-3.0-ethercat.h \
	e1000_osdep-3.0-orig.h \
	e1000_osdep-3.10-ethercat.h \
	e1000_osdep-3.10-orig.h \
	e1000_osdep-3.12-ethercat.h \
	e1000_osdep-3.12-orig.h \
	e1000_osdep-3.14-ethercat.h \
	e1000_osdep-3.14-orig.h \
	e1000_osdep-3.16-ethercat.h \
	e1000_osdep-3.16-orig.h \
	e1000_osdep-3.18-ethercat.h \
	e1000_osdep-3.18-orig.h \
	e1000_osdep-3.4-ethercat.h \
	e1000_osdep-3.4-orig.h \
	e1000_osdep-3.6-ethercat.h \
	e1000_osdep-3.6-orig.h \
	e1000_osdep-3.8-ethercat.h \
	e1000_osdep-3.8-orig.h \
	e1000_osdep-4.1-ethercat.h \
	e1000_osdep-4.1-orig.h \
	e1000_osdep-4.4-ethercat.h \
	e1000_osdep-4.4-orig.h \
	e1000_osdep-4.9-ethercat.h \
	e1000_osdep-4.9-orig.h \
	e1000_osdep-4.14-ethercat.h \
	e1000_osdep-4.14-orig.h \
	e1000_param-2.6.13-ethercat.c \
	e1000_param-2.6.13-orig.c \
	e1000_param-2.6.18-ethercat.c \
	e1000_param-2.6.18-orig.c \
	e1000_param-2.6.20-ethercat.c \
	e1000_param-2.6.20-orig.c \
	e1000_param-2.6.22-ethercat.c \
	e1000_param-2.6.22-orig.c \
	e1000_param-2.6.24-ethercat.c \
	e1000_param-2.6.24-orig.c \
	e1000_param-2.6.26-ethercat.c \
	e1000_param-2.6.26-orig.c \
	e1000_param-2.6.27-ethercat.c \
	e1000_param-2.6.27-orig.c \
	e1000_param-2.6.28-ethercat.c \
	e1000_param-2.6.28-orig.c \
	e1000_param-2.6.29-ethercat.c \
	e1000_param-2.6.29-orig.c \
	e1000_param-2.6.31-ethercat.c \
	e1000_param-2.6.31-orig.c \
	e1000_param-2.6.32-ethercat.c \
	e1000_param-2.6.32-orig.c \
	e1000_param-2.6.33-ethercat.c \
	e1000_param-2.6.33-orig.c \
	e1000_param-2.6.35-ethercat.c \
	e1000_param-2.6.35-orig.c \
	e1000_param-2.6.37-ethercat.c \
	e1000_param-2.6.37-orig.c \
	e1000_param-3.0-ethercat.c \
	e1000_param-3.0-orig.c \
	e1000_param-3.10-ethercat.c \
	e1000_param-3.10-orig.c \
	e1000_param-3.12-ethercat.c \
	e1000_param-3.12-orig.c \
	e1000_param-3.14-ethercat.c \
	e1000_param-3.14-orig.c \
	e1000_param-3.16-ethercat.c \
	e1000_param-3.16-orig.c \
	e1000_param-3.18-ethercat.c \
	e1000_param-3.18-orig.c \
	e1000_param-3.4-ethercat.c \
	e1000_param-3.4-orig.c \
	e1000_param-3.6-ethercat.c \
	e1000_param-3.6-orig.c \
	e1000_param-3.8-ethercat.c \
	e1000_param-3.8-orig.c \
	e1000_param-4.1-ethercat.c \
	e1000_param-4.1-orig.c \
	e1000_param-4.4-ethercat.c \
	e1000_param-4.4-orig.c \
	e1000_param-4.9-ethercat.c \
	e1000_param-4.9-orig.c \
	e1000_param-4.14-ethercat.c \
	e1000_param-4.14-orig.c


BUILT_SOURCES = \
	Kbuild

modules:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" modules

modules_install:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" \
		INSTALL_MOD_DIR="$(INSTALL_MOD_DIR)" modules_install

clean-local:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" clean

#------------------------------------------------------------------------------
