#------------------------------------------------------------------------------
#
#  $Id$
#
#  Copyright (C) 2006-2008  Florian Pose, Ingenieurgemeinschaft IgH
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#  ---
#
#  The license mentioned above concerns the source code only. Using the
#  EtherCAT technology and brand is only permitted in compliance with the
#  industrial property and similar rights of Beckhoff Automation GmbH.
#
#------------------------------------------------------------------------------

EXTRA_DIST = \
	82571-2.6.32-ethercat.c \
	82571-2.6.32-orig.c \
	82571-2.6.33-ethercat.c \
	82571-2.6.33-orig.c \
	82571-2.6.34-ethercat.c \
	82571-2.6.34-orig.c \
	82571-2.6.35-ethercat.c \
	82571-2.6.35-orig.c \
	82571-2.6.37-ethercat.c \
	82571-2.6.37-orig.c \
	82571-3.2-ethercat.c \
	82571-3.2-orig.c \
	Kbuild.in \
	defines-2.6.32-ethercat.h \
	defines-2.6.32-orig.h \
	defines-2.6.33-ethercat.h \
	defines-2.6.33-orig.h \
	defines-2.6.34-ethercat.h \
	defines-2.6.34-orig.h \
	defines-2.6.35-ethercat.h \
	defines-2.6.35-orig.h \
	defines-2.6.37-ethercat.h \
	defines-2.6.37-orig.h \
	defines-3.2-ethercat.h \
	defines-3.2-orig.h \
	e1000-2.6.32-ethercat.h \
	e1000-2.6.32-orig.h \
	e1000-2.6.33-ethercat.h \
	e1000-2.6.33-orig.h \
	e1000-2.6.34-ethercat.h \
	e1000-2.6.34-orig.h \
	e1000-2.6.35-ethercat.h \
	e1000-2.6.35-orig.h \
	e1000-2.6.37-ethercat.h \
	e1000-2.6.37-orig.h \
	e1000-3.2-ethercat.h \
	e1000-3.2-orig.h \
	es2lan-2.6.32-ethercat.c \
	es2lan-2.6.32-orig.c \
	es2lan-2.6.33-ethercat.c \
	es2lan-2.6.33-orig.c \
	es2lan-2.6.34-ethercat.c \
	es2lan-2.6.34-orig.c \
	es2lan-2.6.35-ethercat.c \
	es2lan-2.6.35-orig.c \
	es2lan-2.6.37-ethercat.c \
	es2lan-2.6.37-orig.c \
	es2lan-3.2-ethercat.c \
	es2lan-3.2-orig.c \
	ethtool-2.6.32-ethercat.c \
	ethtool-2.6.32-orig.c \
	ethtool-2.6.33-ethercat.c \
	ethtool-2.6.33-orig.c \
	ethtool-2.6.34-ethercat.c \
	ethtool-2.6.34-orig.c \
	ethtool-2.6.35-ethercat.c \
	ethtool-2.6.35-orig.c \
	ethtool-2.6.37-ethercat.c \
	ethtool-2.6.37-orig.c \
	ethtool-3.2-ethercat.c \
	ethtool-3.2-orig.c \
	hw-2.6.32-ethercat.h \
	hw-2.6.32-orig.h \
	hw-2.6.33-ethercat.h \
	hw-2.6.33-orig.h \
	hw-2.6.34-ethercat.h \
	hw-2.6.34-orig.h \
	hw-2.6.35-ethercat.h \
	hw-2.6.35-orig.h \
	hw-2.6.37-ethercat.h \
	hw-2.6.37-orig.h \
	hw-3.2-ethercat.h \
	hw-3.2-orig.h \
	ich8lan-2.6.32-ethercat.c \
	ich8lan-2.6.32-orig.c \
	ich8lan-2.6.33-ethercat.c \
	ich8lan-2.6.33-orig.c \
	ich8lan-2.6.34-ethercat.c \
	ich8lan-2.6.34-orig.c \
	ich8lan-2.6.35-ethercat.c \
	ich8lan-2.6.35-orig.c \
	ich8lan-2.6.37-ethercat.c \
	ich8lan-2.6.37-orig.c \
	ich8lan-3.2-ethercat.c \
	ich8lan-3.2-orig.c \
	lib-2.6.32-ethercat.c \
	lib-2.6.32-orig.c \
	lib-2.6.33-ethercat.c \
	lib-2.6.33-orig.c \
	lib-2.6.34-ethercat.c \
	lib-2.6.34-orig.c \
	lib-2.6.35-ethercat.c \
	lib-2.6.35-orig.c \
	lib-2.6.37-ethercat.c \
	lib-2.6.37-orig.c \
	lib-3.2-ethercat.c \
	lib-3.2-orig.c \
	netdev-2.6.32-ethercat.c \
	netdev-2.6.32-orig.c \
	netdev-2.6.33-ethercat.c \
	netdev-2.6.33-orig.c \
	netdev-2.6.34-ethercat.c \
	netdev-2.6.34-orig.c \
	netdev-2.6.35-ethercat.c \
	netdev-2.6.35-orig.c \
	netdev-2.6.37-ethercat.c \
	netdev-2.6.37-orig.c \
	netdev-3.2-ethercat.c \
	netdev-3.2-orig.c \
	param-2.6.32-ethercat.c \
	param-2.6.32-orig.c \
	param-2.6.33-ethercat.c \
	param-2.6.33-orig.c \
	param-2.6.34-ethercat.c \
	param-2.6.34-orig.c \
	param-2.6.35-ethercat.c \
	param-2.6.35-orig.c \
	param-2.6.37-ethercat.c \
	param-2.6.37-orig.c \
	param-3.2-ethercat.c \
	param-3.2-orig.c \
	phy-2.6.32-ethercat.c \
	phy-2.6.32-orig.c \
	phy-2.6.33-ethercat.c \
	phy-2.6.33-orig.c \
	phy-2.6.34-ethercat.c \
	phy-2.6.34-orig.c \
	phy-2.6.35-ethercat.c \
	phy-2.6.35-orig.c \
	phy-2.6.37-ethercat.c \
	phy-2.6.37-orig.c \
	phy-3.2-ethercat.c \
	phy-3.2-orig.c

BUILT_SOURCES = \
	Kbuild

modules:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" modules

modules_install:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" \
		INSTALL_MOD_DIR="$(INSTALL_MOD_DIR)" modules_install

clean-local:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" clean

#------------------------------------------------------------------------------
