#------------------------------------------------------------------------------
#
#  $Id: Makefile.am,v 792892ab4806 2014/10/28 15:54:59 fp $
#
#  Copyright (C) 2006-2008  Florian Pose, Ingenieurgemeinschaft IgH
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#  ---
#
#  The license mentioned above concerns the source code only. Using the
#  EtherCAT technology and brand is only permitted in compliance with the
#  industrial property and similar rights of Beckhoff Automation GmbH.
#
#------------------------------------------------------------------------------

EXTRA_DIST = \
	80003es2lan-3.10-ethercat.c \
	80003es2lan-3.10-ethercat.h \
	80003es2lan-3.10-orig.c \
	80003es2lan-3.10-orig.h \
	80003es2lan-3.12-ethercat.c \
	80003es2lan-3.12-ethercat.h \
	80003es2lan-3.12-orig.c \
	80003es2lan-3.12-orig.h \
	80003es2lan-3.14-ethercat.c \
	80003es2lan-3.14-ethercat.h \
	80003es2lan-3.14-orig.c \
	80003es2lan-3.14-orig.h \
	80003es2lan-3.16-ethercat.c \
	80003es2lan-3.16-ethercat.h \
	80003es2lan-3.16-orig.c \
	80003es2lan-3.16-orig.h \
	80003es2lan-3.4-ethercat.c \
	80003es2lan-3.4-orig.c \
	80003es2lan-3.6-ethercat.c \
	80003es2lan-3.6-orig.c \
	80003es2lan-3.8-ethercat.c \
	80003es2lan-3.8-orig.c \
	80003es2lan-4.4-ethercat.c \
	80003es2lan-4.4-ethercat.h \
	80003es2lan-4.4-orig.c \
	80003es2lan-4.4-orig.h \
	82571-2.6.32-ethercat.c \
	82571-2.6.32-orig.c \
	82571-2.6.33-ethercat.c \
	82571-2.6.33-orig.c \
	82571-2.6.34-ethercat.c \
	82571-2.6.34-orig.c \
	82571-2.6.35-ethercat.c \
	82571-2.6.35-orig.c \
	82571-2.6.37-ethercat.c \
	82571-2.6.37-orig.c \
	82571-3.10-ethercat.c \
	82571-3.10-ethercat.h \
	82571-3.10-orig.c \
	82571-3.10-orig.h \
	82571-3.12-ethercat.c \
	82571-3.12-ethercat.h \
	82571-3.12-orig.c \
	82571-3.12-orig.h \
	82571-3.14-ethercat.c \
	82571-3.14-ethercat.h \
	82571-3.14-orig.c \
	82571-3.14-orig.h \
	82571-3.16-ethercat.c \
	82571-3.16-ethercat.h \
	82571-3.16-orig.c \
	82571-3.16-orig.h \
	82571-3.2-ethercat.c \
	82571-3.2-orig.c \
	82571-3.4-ethercat.c \
	82571-3.4-orig.c \
	82571-3.6-ethercat.c \
	82571-3.6-orig.c \
	82571-3.8-ethercat.c \
	82571-3.8-orig.c \
	82571-4.4-ethercat.c \
	82571-4.4-ethercat.h \
	82571-4.4-orig.c \
	82571-4.4-orig.h \
	Kbuild.in \
	defines-2.6.32-ethercat.h \
	defines-2.6.32-orig.h \
	defines-2.6.33-ethercat.h \
	defines-2.6.33-orig.h \
	defines-2.6.34-ethercat.h \
	defines-2.6.34-orig.h \
	defines-2.6.35-ethercat.h \
	defines-2.6.35-orig.h \
	defines-2.6.37-ethercat.h \
	defines-2.6.37-orig.h \
	defines-3.10-ethercat.h \
	defines-3.10-orig.h \
	defines-3.12-ethercat.h \
	defines-3.12-orig.h \
	defines-3.14-ethercat.h \
	defines-3.14-orig.h \
	defines-3.16-ethercat.h \
	defines-3.16-orig.h \
	defines-3.2-ethercat.h \
	defines-3.2-orig.h \
	defines-3.4-ethercat.h \
	defines-3.4-orig.h \
	defines-3.6-ethercat.h \
	defines-3.6-orig.h \
	defines-3.8-ethercat.h \
	defines-3.8-orig.h \
	defines-4.4-ethercat.h \
	defines-4.4-orig.h \
	e1000-2.6.32-ethercat.h \
	e1000-2.6.32-orig.h \
	e1000-2.6.33-ethercat.h \
	e1000-2.6.33-orig.h \
	e1000-2.6.34-ethercat.h \
	e1000-2.6.34-orig.h \
	e1000-2.6.35-ethercat.h \
	e1000-2.6.35-orig.h \
	e1000-2.6.37-ethercat.h \
	e1000-2.6.37-orig.h \
	e1000-3.10-ethercat.h \
	e1000-3.10-orig.h \
	e1000-3.12-ethercat.h \
	e1000-3.12-orig.h \
	e1000-3.14-ethercat.h \
	e1000-3.14-orig.h \
	e1000-3.16-ethercat.h \
	e1000-3.16-orig.h \
	e1000-3.2-ethercat.h \
	e1000-3.2-orig.h \
	e1000-3.4-ethercat.h \
	e1000-3.4-orig.h \
	e1000-3.6-ethercat.h \
	e1000-3.6-orig.h \
	e1000-3.8-ethercat.h \
	e1000-3.8-orig.h \
	e1000-4.4-ethercat.h \
	e1000-4.4-orig.h \
	es2lan-2.6.32-ethercat.c \
	es2lan-2.6.32-orig.c \
	es2lan-2.6.33-ethercat.c \
	es2lan-2.6.33-orig.c \
	es2lan-2.6.34-ethercat.c \
	es2lan-2.6.34-orig.c \
	es2lan-2.6.35-ethercat.c \
	es2lan-2.6.35-orig.c \
	es2lan-2.6.37-ethercat.c \
	es2lan-2.6.37-orig.c \
	es2lan-3.2-ethercat.c \
	es2lan-3.2-orig.c \
	ethtool-2.6.32-ethercat.c \
	ethtool-2.6.32-orig.c \
	ethtool-2.6.33-ethercat.c \
	ethtool-2.6.33-orig.c \
	ethtool-2.6.34-ethercat.c \
	ethtool-2.6.34-orig.c \
	ethtool-2.6.35-ethercat.c \
	ethtool-2.6.35-orig.c \
	ethtool-2.6.37-ethercat.c \
	ethtool-2.6.37-orig.c \
	ethtool-3.10-ethercat.c \
	ethtool-3.10-orig.c \
	ethtool-3.12-ethercat.c \
	ethtool-3.12-orig.c \
	ethtool-3.14-ethercat.c \
	ethtool-3.14-orig.c \
	ethtool-3.16-ethercat.c \
	ethtool-3.16-orig.c \
	ethtool-3.2-ethercat.c \
	ethtool-3.2-orig.c \
	ethtool-3.4-ethercat.c \
	ethtool-3.4-orig.c \
	ethtool-3.6-ethercat.c \
	ethtool-3.6-orig.c \
	ethtool-3.8-ethercat.c \
	ethtool-3.8-orig.c \
	ethtool-4.4-ethercat.c \
	ethtool-4.4-orig.c \
	hw-2.6.32-ethercat.h \
	hw-2.6.32-orig.h \
	hw-2.6.33-ethercat.h \
	hw-2.6.33-orig.h \
	hw-2.6.34-ethercat.h \
	hw-2.6.34-orig.h \
	hw-2.6.35-ethercat.h \
	hw-2.6.35-orig.h \
	hw-2.6.37-ethercat.h \
	hw-2.6.37-orig.h \
	hw-3.10-ethercat.h \
	hw-3.10-orig.h \
	hw-3.12-ethercat.h \
	hw-3.12-orig.h \
	hw-3.14-ethercat.h \
	hw-3.14-orig.h \
	hw-3.16-ethercat.h \
	hw-3.16-orig.h \
	hw-3.2-ethercat.h \
	hw-3.2-orig.h \
	hw-3.4-ethercat.h \
	hw-3.4-orig.h \
	hw-3.6-ethercat.h \
	hw-3.6-orig.h \
	hw-3.8-ethercat.h \
	hw-3.8-orig.h \
	hw-4.4-ethercat.h \
	hw-4.4-orig.h \
	ich8lan-2.6.32-ethercat.c \
	ich8lan-2.6.32-orig.c \
	ich8lan-2.6.33-ethercat.c \
	ich8lan-2.6.33-orig.c \
	ich8lan-2.6.34-ethercat.c \
	ich8lan-2.6.34-orig.c \
	ich8lan-2.6.35-ethercat.c \
	ich8lan-2.6.35-orig.c \
	ich8lan-2.6.37-ethercat.c \
	ich8lan-2.6.37-orig.c \
	ich8lan-3.10-ethercat.c \
	ich8lan-3.10-ethercat.h \
	ich8lan-3.10-orig.c \
	ich8lan-3.10-orig.h \
	ich8lan-3.12-ethercat.c \
	ich8lan-3.12-ethercat.h \
	ich8lan-3.12-orig.c \
	ich8lan-3.12-orig.h \
	ich8lan-3.14-ethercat.c \
	ich8lan-3.14-ethercat.h \
	ich8lan-3.14-orig.c \
	ich8lan-3.14-orig.h \
	ich8lan-3.16-ethercat.c \
	ich8lan-3.16-ethercat.h \
	ich8lan-3.16-orig.c \
	ich8lan-3.16-orig.h \
	ich8lan-3.2-ethercat.c \
	ich8lan-3.2-orig.c \
	ich8lan-3.4-ethercat.c \
	ich8lan-3.4-orig.c \
	ich8lan-3.6-ethercat.c \
	ich8lan-3.6-orig.c \
	ich8lan-3.8-ethercat.c \
	ich8lan-3.8-orig.c \
	ich8lan-4.4-ethercat.c \
	ich8lan-4.4-ethercat.h \
	ich8lan-4.4-orig.c \
	ich8lan-4.4-orig.h \
	lib-2.6.32-ethercat.c \
	lib-2.6.32-orig.c \
	lib-2.6.33-ethercat.c \
	lib-2.6.33-orig.c \
	lib-2.6.34-ethercat.c \
	lib-2.6.34-orig.c \
	lib-2.6.35-ethercat.c \
	lib-2.6.35-orig.c \
	lib-2.6.37-ethercat.c \
	lib-2.6.37-orig.c \
	lib-3.2-ethercat.c \
	lib-3.2-orig.c \
	mac-3.10-ethercat.c \
	mac-3.10-ethercat.h \
	mac-3.10-orig.c \
	mac-3.10-orig.h \
	mac-3.12-ethercat.c \
	mac-3.12-ethercat.h \
	mac-3.12-orig.c \
	mac-3.12-orig.h \
	mac-3.14-ethercat.c \
	mac-3.14-ethercat.h \
	mac-3.14-orig.c \
	mac-3.14-orig.h \
	mac-3.16-ethercat.c \
	mac-3.16-ethercat.h \
	mac-3.16-orig.c \
	mac-3.16-orig.h \
	mac-3.4-ethercat.c \
	mac-3.4-orig.c \
	mac-3.6-ethercat.c \
	mac-3.6-orig.c \
	mac-3.8-ethercat.c \
	mac-3.8-orig.c \
	mac-4.4-ethercat.c \
	mac-4.4-ethercat.h \
	mac-4.4-orig.c \
	mac-4.4-orig.h \
	manage-3.10-ethercat.c \
	manage-3.10-ethercat.h \
	manage-3.10-orig.c \
	manage-3.10-orig.h \
	manage-3.12-ethercat.c \
	manage-3.12-ethercat.h \
	manage-3.12-orig.c \
	manage-3.12-orig.h \
	manage-3.14-ethercat.c \
	manage-3.14-ethercat.h \
	manage-3.14-orig.c \
	manage-3.14-orig.h \
	manage-3.16-ethercat.c \
	manage-3.16-ethercat.h \
	manage-3.16-orig.c \
	manage-3.16-orig.h \
	manage-3.4-ethercat.c \
	manage-3.4-orig.c \
	manage-3.6-ethercat.c \
	manage-3.6-orig.c \
	manage-3.8-ethercat.c \
	manage-3.8-orig.c \
	manage-4.4-ethercat.c \
	manage-4.4-ethercat.h \
	manage-4.4-orig.c \
	manage-4.4-orig.h \
	netdev-2.6.32-ethercat.c \
	netdev-2.6.32-orig.c \
	netdev-2.6.33-ethercat.c \
	netdev-2.6.33-orig.c \
	netdev-2.6.34-ethercat.c \
	netdev-2.6.34-orig.c \
	netdev-2.6.35-ethercat.c \
	netdev-2.6.35-orig.c \
	netdev-2.6.37-ethercat.c \
	netdev-2.6.37-orig.c \
	netdev-3.10-ethercat.c \
	netdev-3.10-orig.c \
	netdev-3.12-ethercat.c \
	netdev-3.12-orig.c \
	netdev-3.14-ethercat.c \
	netdev-3.14-orig.c \
	netdev-3.16-ethercat.c \
	netdev-3.16-orig.c \
	netdev-3.2-ethercat.c \
	netdev-3.2-orig.c \
	netdev-3.4-ethercat.c \
	netdev-3.4-orig.c \
	netdev-3.6-ethercat.c \
	netdev-3.6-orig.c \
	netdev-3.8-ethercat.c \
	netdev-3.8-orig.c \
	netdev-4.4-ethercat.c \
	netdev-4.4-orig.c \
	nvm-3.10-ethercat.c \
	nvm-3.10-ethercat.h \
	nvm-3.10-orig.c \
	nvm-3.10-orig.h \
	nvm-3.12-ethercat.c \
	nvm-3.12-ethercat.h \
	nvm-3.12-orig.c \
	nvm-3.12-orig.h \
	nvm-3.14-ethercat.c \
	nvm-3.14-ethercat.h \
	nvm-3.14-orig.c \
	nvm-3.14-orig.h \
	nvm-3.16-ethercat.c \
	nvm-3.16-ethercat.h \
	nvm-3.16-orig.c \
	nvm-3.16-orig.h \
	nvm-3.4-ethercat.c \
	nvm-3.4-orig.c \
	nvm-3.6-ethercat.c \
	nvm-3.6-orig.c \
	nvm-3.8-ethercat.c \
	nvm-3.8-orig.c \ \
	nvm-4.4-ethercat.c \
	nvm-4.4-ethercat.h \
	nvm-4.4-orig.c \
	nvm-4.4-orig.h \
	param-2.6.32-ethercat.c \
	param-2.6.32-orig.c \
	param-2.6.33-ethercat.c \
	param-2.6.33-orig.c \
	param-2.6.34-ethercat.c \
	param-2.6.34-orig.c \
	param-2.6.35-ethercat.c \
	param-2.6.35-orig.c \
	param-2.6.37-ethercat.c \
	param-2.6.37-orig.c \
	param-3.10-ethercat.c \
	param-3.10-orig.c \
	param-3.12-ethercat.c \
	param-3.12-orig.c \
	param-3.14-ethercat.c \
	param-3.14-orig.c \
	param-3.16-ethercat.c \
	param-3.16-orig.c \
	param-3.2-ethercat.c \
	param-3.2-orig.c \
	param-3.4-ethercat.c \
	param-3.4-orig.c \
	param-3.6-ethercat.c \
	param-3.6-orig.c \
	param-3.8-ethercat.c \
	param-3.8-orig.c \
	param-4.4-ethercat.c \
	param-4.4-orig.c \
	phy-2.6.32-ethercat.c \
	phy-2.6.32-orig.c \
	phy-2.6.33-ethercat.c \
	phy-2.6.33-orig.c \
	phy-2.6.34-ethercat.c \
	phy-2.6.34-orig.c \
	phy-2.6.35-ethercat.c \
	phy-2.6.35-orig.c \
	phy-2.6.37-ethercat.c \
	phy-2.6.37-orig.c \
	phy-3.10-ethercat.c \
	phy-3.10-ethercat.h \
	phy-3.10-orig.c \
	phy-3.10-orig.h \
	phy-3.12-ethercat.c \
	phy-3.12-ethercat.h \
	phy-3.12-orig.c \
	phy-3.12-orig.h \
	phy-3.14-ethercat.c \
	phy-3.14-ethercat.h \
	phy-3.14-orig.c \
	phy-3.14-orig.h \
	phy-3.16-ethercat.c \
	phy-3.16-ethercat.h \
	phy-3.16-orig.c \
	phy-3.16-orig.h \
	phy-3.2-ethercat.c \
	phy-3.2-orig.c \
	phy-3.4-ethercat.c \
	phy-3.4-orig.c
	phy-3.6-ethercat.c \
	phy-3.6-orig.c \
	phy-3.8-ethercat.c \
	phy-3.8-orig.c \
	phy-4.4-ethercat.c \
	phy-4.4-ethercat.h \
	phy-4.4-orig.c \
	phy-4.4-orig.h \
	ptp-3.10-ethercat.c \
	ptp-3.10-orig.c \
	ptp-3.12-ethercat.c \
	ptp-3.12-orig.c \
	ptp-3.14-ethercat.c \
	ptp-3.14-orig.c \
	ptp-3.16-ethercat.c \
	ptp-3.16-orig.c \
	ptp-4.4-ethercat.c \
	ptp-4.4-orig.c \
	regs-3.10-ethercat.h \
	regs-3.10-orig.h \
	regs-3.12-ethercat.h \
	regs-3.12-orig.h \
	regs-3.14-ethercat.h \
	regs-3.14-orig.h \
	regs-3.16-ethercat.h \
	regs-3.16-orig.h \
	regs-4.4-ethercat.h \
	regs-4.4-orig.h \
	update.sh

BUILT_SOURCES = \
	Kbuild

modules:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" modules

modules_install:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" \
		INSTALL_MOD_DIR="$(INSTALL_MOD_DIR)" modules_install

clean-local:
	$(MAKE) -C "$(LINUX_SOURCE_DIR)" M="@abs_srcdir@" clean

#------------------------------------------------------------------------------
